# Direct-Share

./: .gitignore  README.md  SECURITY.md  introspection.xml  main.py  requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.md
Android/: settings.gradle.kts
Android/app/: build.gradle.kts
Android/app/src/androidTest/java/com/jericho/directshare/: ExampleInstrumentedTest.kt
Android/app/src/main/: AndroidManifest.xml
Android/app/src/main/java/com/jericho/directshare/: MainActivity.kt
Android/app/src/main/java/com/jericho/directshare/ui/theme/: Color.kt  Theme.kt  Type.kt
Android/app/src/main/res/values/: strings.xml  themes.xml
Android/app/src/test/java/com/jericho/directshare/: ExampleUnitTest.kt
Android/gradle/wrapper/: gradle-wrapper.properties
deprecated/: past.py
linux/: meson.build  pyproject.toml
linux/debian/: control  direct-share.desktop  install
linux/directshare/: __main__.py  app.py  backend.py  core.py  i18n.py  nm.py  ui.py  user.py  wifi_p2p.py
linux/helper/: api.py  main.py
linux/po/: ar.po  direct-share.pot  meson.build
linux/po/ar/LC_MESSAGES/: direct-share.mo
linux/scripts/: direct-share
